[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-support-env"
version = "0.1.0"
description = "A cloud triage environment for OpenEnv hackathon"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core"
]

[project.scripts]
# This tells OpenEnv how to launch your app
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]